Bug 153092 - text is missing inside and right side of image on docx on page 2
Summary: text is missing inside and right side of image on docx on page 2
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: ARM All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords: bibisected, bisected, regression
: 143991 (view as bug list)
Depends on:
Blocks: regression-scaled-glyph-positions
  Show dependency treegraph
 
Reported: 2023-01-18 13:25 UTC by jindam, vani
Modified: 2023-11-22 11:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot of page 2 on word android app with text inside and right of image (114.06 KB, image/png)
2023-01-18 13:27 UTC, jindam, vani
Details
screenshot of page 2 on android viewer app with missing text inside and right of image (110.75 KB, image/png)
2023-01-18 13:28 UTC, jindam, vani
Details
standalone image in blank document (35.37 KB, application/vnd.oasis.opendocument.text)
2023-01-23 10:13 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description jindam, vani 2023-01-18 13:25:46 UTC
Description:
text is missing inside and right side of image on docx on page 2

Steps to Reproduce:
1. open attachment 119130 [details] [bug 94628]
2. go to page 2

Actual Results:
text is missing inside and right side of image

Expected Results:
text must be visible
* power supply (inside image)
* +-GND Master Slave (right side of image)


Reproducible: Always


User Profile Reset: No

Additional Info:
repro on android viewer [fdroid]:
Version: 7.6.0.0.alpha0+
Build ID: d6c54b3d4ee7
Comment 1 jindam, vani 2023-01-18 13:27:58 UTC
Created attachment 184749 [details]
screenshot of page 2 on word android app with text inside and right of image
Comment 2 jindam, vani 2023-01-18 13:28:57 UTC
Created attachment 184750 [details]
screenshot of page 2 on android viewer app with missing text inside and right of image
Comment 3 raal 2023-01-18 20:08:51 UTC
Works in Version: 7.3.7.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: cs-CZ
Ubuntu package version: 1:7.3.7-0ubuntu0.22.04.1
Calc: threaded

but not in Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f65d7fb18c5b850a381727a67c97fc94128082d2
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: cs-CZ (cs_CZ.UTF-8); UI: en-US
Calc: threaded
Comment 4 raal 2023-01-18 20:17:28 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara ; Could you possibly take a look at this one?
Thanks
 5e9e431b4a9bc67357adaf635c34bdfd3ee61321 is the first bad commit
commit 5e9e431b4a9bc67357adaf635c34bdfd3ee61321
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Aug 18 20:45:42 2022 +0200

    source 1fa731d03ba0f22cb9392a578124ea977eaab2e9

https://gerrit.libreoffice.org/c/core/+/138448
Comment 5 jindam, vani 2023-01-19 03:01:08 UTC
@raal
just now reckhecked, page 6 is also complete mess.
attachment 118885 [details] on Bug 94368 pg 13 has also 
text missing. however its a .doc file.
should i open seperate issues or wait for fix.
Comment 6 Caolán McNamara 2023-01-23 10:13:30 UTC
Created attachment 184838 [details]
standalone image in blank document

smaller reproducer
Comment 7 Caolán McNamara 2023-01-23 16:09:08 UTC
Something a bit odd here, I also bibisect to that commit, but reverting it doesn't make it better and the code in the commit doesn't seem to get hit at all. Odd, have to investigate another way.
Comment 8 Commit Notification 2023-01-25 19:24:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9d60497954ed25bd802e66b5de0f375b301c79eb

tdf#153092 text appears missing with font sizes < 1

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Caolán McNamara 2023-01-25 19:28:31 UTC
that works for me in trunk, backport to 7-5 in gerrit
Comment 10 Commit Notification 2023-01-27 10:37:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/356eaef8518c1a35dcfda851a0aeb096b00f3f3d

tdf#153092 text appears missing with font sizes < 1

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2023-08-07 15:22:06 UTC
*** Bug 143991 has been marked as a duplicate of this bug. ***